--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "lucasroquesousa <lucasroquesousa@hotmail.com>",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node-dev src/server.ts"
+    "dev": "ts-node-dev --transpile-only src/server.ts"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
@@ -14,6 +14,9 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
-    "express": "^4.18.1"
+    "@types/cors": "^2.8.12",
+    "cors": "^2.8.5",
+    "express": "^4.18.1",
+    "express-async-errors": "^3.1.1"
   }
 }
