--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "@prisma/client": "^4.2.1",
     "@types/cors": "^2.8.12",
     "cors": "^2.8.5",
     "express": "^4.18.1",
-    "express-async-errors": "^3.1.1"
+    "express-async-errors": "^3.1.1",
+    "prisma": "^4.2.1"
   }
 }
