--- a/package.json
+++ b/package.json
@@ -14,11 +14,18 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "-": "^0.0.1",
     "@prisma/client": "^4.2.1",
+    "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.12",
+    "@types/jsonwebtoken": "^8.5.8",
+    "D": "^1.0.0",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^8.5.1",
     "prisma": "^4.2.1"
   }
 }
