--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/multer": "^1.4.7",
+    "multer": "^1.4.5-lts.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.4"
   },
